# stm32-eth-usb

./: .gitmodules  CMakeLists.txt  README.md  eth.c  eth.h  gdb.sh  gpio.h  main.c  st_nucleo_f2.cfg  stm32f2xx_hal_conf.h  uart.c  uart.h  usbd_cdc_ecm_if.c  usbd_conf.c  usbd_conf.h  usbd_desc.c  usbd_desc.h
